{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 9,
  "lineage": "edf53ec7-78d2-a113-45c0-cd76c7b4b1cc",
  "resources": [
    {
      "module": "module.turma07",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:196203652219:internet-gateway/igw-067c54a6eac65c953",
            "id": "igw-067c54a6eac65c953",
            "owner_id": "196203652219",
            "tags": {
              "Name": "turma07-vpc",
              "env": "prod",
              "projeto": "Turma07"
            },
            "tags_all": {
              "Name": "turma07-vpc",
              "env": "prod",
              "projeto": "Turma07"
            },
            "vpc_id": "vpc-074ac28b0d10fd06f"
          },
          "dependencies": [
            "module.turma07.aws_vpc.this",
            "module.turma07.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.turma07",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-067c54a6eac65c953",
            "id": "r-rtb-0f9a9e7729cfc143c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f9a9e7729cfc143c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.turma07.aws_internet_gateway.this",
            "module.turma07.aws_route_table.public",
            "module.turma07.aws_vpc.this",
            "module.turma07.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.turma07",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:196203652219:route-table/rtb-0f9a9e7729cfc143c",
            "id": "rtb-0f9a9e7729cfc143c",
            "owner_id": "196203652219",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "turma07-vpc-public",
              "env": "prod",
              "projeto": "Turma07"
            },
            "tags_all": {
              "Name": "turma07-vpc-public",
              "env": "prod",
              "projeto": "Turma07"
            },
            "timeouts": null,
            "vpc_id": "vpc-074ac28b0d10fd06f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.turma07.aws_vpc.this",
            "module.turma07.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.turma07",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06280c028c49dde8d",
            "route_table_id": "rtb-0f9a9e7729cfc143c",
            "subnet_id": "subnet-0a164a1458deff0a1"
          },
          "dependencies": [
            "module.turma07.aws_route_table.public",
            "module.turma07.aws_subnet.public",
            "module.turma07.aws_vpc.this",
            "module.turma07.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3a05d9200c6d0af",
            "route_table_id": "rtb-0f9a9e7729cfc143c",
            "subnet_id": "subnet-0964fb36e991d2fc9"
          },
          "dependencies": [
            "module.turma07.aws_route_table.public",
            "module.turma07.aws_subnet.public",
            "module.turma07.aws_vpc.this",
            "module.turma07.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.turma07",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:196203652219:subnet/subnet-0a164a1458deff0a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a164a1458deff0a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "196203652219",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "turma07-vpc-public-us-east-1a",
              "env": "prod",
              "projeto": "Turma07"
            },
            "tags_all": {
              "Name": "turma07-vpc-public-us-east-1a",
              "env": "prod",
              "projeto": "Turma07"
            },
            "vpc_id": "vpc-074ac28b0d10fd06f"
          },
          "dependencies": [
            "module.turma07.aws_vpc.this",
            "module.turma07.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:196203652219:subnet/subnet-0964fb36e991d2fc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0964fb36e991d2fc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "196203652219",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "turma07-vpc-public-us-east-1c",
              "env": "prod",
              "projeto": "Turma07"
            },
            "tags_all": {
              "Name": "turma07-vpc-public-us-east-1c",
              "env": "prod",
              "projeto": "Turma07"
            },
            "vpc_id": "vpc-074ac28b0d10fd06f"
          },
          "dependencies": [
            "module.turma07.aws_vpc.this",
            "module.turma07.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.turma07",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:196203652219:vpc/vpc-074ac28b0d10fd06f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03d9cd829c7b09566",
            "default_route_table_id": "rtb-0cddadd5801712788",
            "default_security_group_id": "sg-02b17833ce955020a",
            "dhcp_options_id": "dopt-0ef770800a0fedd24",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-074ac28b0d10fd06f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cddadd5801712788",
            "owner_id": "196203652219",
            "tags": {
              "Name": "turma07-vpc",
              "env": "prod",
              "projeto": "Turma07"
            },
            "tags_all": {
              "Name": "turma07-vpc",
              "env": "prod",
              "projeto": "Turma07"
            }
          }
        }
      ]
    }
  ]
}